--- a/src/Skoruba.IdentityServer4.STS.Identity/Resources/Views/Shared/_Layout.de.resx
+++ b/src/Skoruba.IdentityServer4.STS.Identity/Resources/Views/Shared/_Layout.de.resx
@@ -142,7 +142,7 @@
     <value>Menü</value>
   </data>
   <data name="Settings" xml:space="preserve">
-    <value>Einstelllungen</value>
+    <value>Einstellungen</value>
   </data>
   <data name="Signout" xml:space="preserve">
     <value>Abmelden</value>
